fixed an exploit that would have allowed injecting commands into messages using chchest announcements.
Since custom messages where specifyable this is dangerous since if wanted this allowed injecting things into a string which would have allowed injecting other command click events into things which could have been abused. Never occur but better fixed than not.